--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "directories": {
     "test": "test"
-    
   },
   "scripts": {
     "test": "mocha",
@@ -21,6 +20,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.3"
+    "express-flash": "0.0.2",
+    "express-handlebars": "^5.3.3",
+    "express-session": "^1.17.2"
   }
 }
