--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-handlebars": "^5.3.3",
-    "express-session": "^1.17.2"
+    "express-session": "^1.17.2",
+    "pg": "^8.7.1"
   }
 }
