--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: node_js
 node_js:
   12
+
+  before_script:
+  - psql -c create database greetings; -u postgres
+  - psql -u postgres -d greetings -a -f greeted.sql
+
+  services:
+  -postgresql
