--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
-  12
+  "12"
+
+env:
+  - DATABASE_URL=postgresql://postgres@localhost:5432/greetings
 
   before_script:
   - psql -c create database greetings; -u postgres
