--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ env:
   - DATABASE_URL=postgresql://postgres@localhost:5432/greetings
 
 before_script:
-  - psql -c create database greetings; -u postgres
-  - psql -u postgres -d greetings -a -f greeted.sql
+  - psql -c 'create database greetings;' -U postgres
+  - psql -U postgres -d greetings -a -f greeted.sql
 
 services:
   -postgresql
